--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Cache-Control" content="private, no-cache, no-store, must-revalidate, max-age=0, proxy-revalidate, s-maxage=0">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    <meta http-equiv="Vary" content="*">  
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <meta content="Open source project for blockchain wallet." name="description">
     <meta content="vue,ethereum,blockchain,wallet,vuethwallet" name="keywords">
