--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="manifest" href="/static/manifest.json" />
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
-    <title>*** Vue Ethwallet ***</title>
+    <title>*** Vue EthSwapper ***</title>
   </head>
   <body>
     <div id="vuethwallet"></div>
